# CutCost

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  add_offers.py  crawl_digitec.py  hide_broken_merchant_offers.py  pyproject.toml  railway.toml  setup_db.py  start.sh  test_digitec_live.py
backend/app/: config.py  database.py  main.py  offer_visibility.py
backend/app/api/: browse.py  products.py  search.py
backend/app/extractors/: amazon.py  base.py  digitec.py
backend/app/models/: __init__.py  admin.py  base.py  cost.py  crawl.py  merchant.py  offer.py  product.py  search.py  trust.py
backend/app/services/: affiliate_service.py  browse_service.py  category_service.py  cost_service.py  currency_service.py  deep_search_service.py  matching_service.py  ranking_service.py  search_service.py
backend/app/utils/: llm.py  normalization.py
backend/app/workers/: settings.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 589bcf7427d2_initial_schema.py
backend/seeds/: digitec_mappings.json  import_rules.json  merchants.json  products.json  seed.py
backend/tests/: test_cost_engine.py  test_matching.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/browse/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: CostBreakdown.tsx  FilterSidebar.tsx  Footer.tsx  GuidedSearch.tsx  ModeToggle.tsx  OfferCard.tsx  ProductCard.tsx  Providers.tsx  SearchBar.tsx  SortBar.tsx  TrustBadge.tsx
frontend/src/lib/: api.ts  types.ts
(+1 files in other folders)
